--- a/FirstApp/app/src/main/AndroidManifest.xml
+++ b/FirstApp/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".page_3"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".page_4"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
