--- a/FirstApp/app/src/main/AndroidManifest.xml
+++ b/FirstApp/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name=".page_4"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".page_5"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
