--- a/FirstApp/app/src/main/AndroidManifest.xml
+++ b/FirstApp/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name=".page_5"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".page_6"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
